# foxy

./: .gitignore  README.md  setup.cfg  setup.py
docs/: README.md  TOC.md  faq.md  install.md  usage.md
examples/: createtable.py  useexceltables.py
foxy/: .gitignore  __main__.py
foxy/database/: database.ini  parser.py
src/foxy/: __main__.py  debugger.py
src/foxy/database/: cell.py  database.ini  database.py  parser.py  table.py
src/foxy/listener/: database.py  event.py
src/foxy/utils/: exceptions.py  property_manager.py  publisher.py
test/: complete_test.py  test_cell.py
test/benchmarks/: save.py
tests/: complete_test.py
tests/benchmarks/: save.py  speed.py
tests/installs/: database.py
tests/long benchmarks/: long_speed_and_save.py
tests/other/: excel.py
