[metadata]
name = foxy
version = 2021.11.13.1 # yyyy.mm.dd.build
license =  GPL-3.0-only 
description = create database with tables
long_description = file: README.md
author = DoctorFuchs

[DATABASE]
autoload = Yes
autosave = No # in production
filetype = .foxydb

[ERRORS]
mustbeuppercase = Position must be uppercase
patternExampleSingleCell = Please use a pattern like A1 or DOCTOR11
patternExampleMultipleCells = Please use a pattern like A1:C3 or MOVIES1:SERIES9
tableNotFound = No table found in this database